--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:id="@+id/rl"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="58dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -106,23 +106,168 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
             <TextView
+                android:id="@+id/tv_current_channel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="当前频道"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:clickable="true"
                 android:textColor="#FF00CFA1"
                 android:textSize="12dp"
                 android:layout_weight="1"
                 android:gravity="center" />
             <TextView
+                android:id="@+id/tv_search_channel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="搜索频道"
                 android:layout_weight="1"
-                android:textColor="#FF444444"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:clickable="true"
+                android:textColor="@color/textBlackColor"
                 android:textSize="12dp"
                 android:gravity="center" />
         </LinearLayout>
+
     <LinearLayout
+        android:id="@+id/search_result_ll"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="16dp"
+        android:background="@android:color/white"
+        android:layout_marginRight="16dp"
+        android:visibility="gone"
+        android:layout_marginTop="2dp"
+        android:layout_height="match_parent">
+        <GridView
+            android:id="@+id/search_result_gradview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:numColumns="3"
+            android:stretchMode="columnWidth"
+            android:layout_gravity="center_horizontal">
+        </GridView>
+
+        <TextView
+            android:id="@+id/tv_search_result"
+            android:text="搜索结束，共搜到3个频道"
+            android:textColor="@color/colorGreyLittle"
+            android:textSize="12dp"
+            android:layout_marginTop="18dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/tv_search_again"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="重新搜索"
+                android:layout_marginBottom="18dp"
+                android:padding="12dp"
+                android:layout_alignParentBottom="true"
+                android:textColor="#FF00CFA1"
+                android:textSize="11dp"
+                android:gravity="bottom|center"
+                android:layout_centerHorizontal="true" />
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+
+
+    <LinearLayout
+        android:id="@+id/search_process_ll"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="16dp"
+        android:background="@android:color/white"
+        android:layout_marginRight="16dp"
+        android:visibility="gone"
+        android:layout_marginTop="2dp"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_gravity="left|center"
+                android:layout_marginLeft="16dp"
+                android:src="@drawable/rotate_img_scan"
+                android:layout_height="60dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="正在搜索…"
+                android:textColor="#FF333333"
+                android:textSize="12dp"
+                android:layout_marginLeft="4dp"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/dividerColor"
+            android:layout_height="1dp"/>
+        <GridView
+            android:id="@+id/search_gradview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:numColumns="3"
+            android:stretchMode="columnWidth"
+            android:layout_gravity="center_horizontal">
+        </GridView>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/search_channel_ll"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="16dp"
+        android:background="@android:color/white"
+        android:layout_marginRight="16dp"
+        android:visibility="gone"
+        android:layout_marginTop="2dp"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:src="@drawable/rotate_img_scan"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/bt_goSearch"
+            android:layout_width="78dp"
+            android:text="立即搜台"
+            android:textColor="@android:color/white"
+            android:background="@drawable/btn_search"
+            android:layout_gravity="center"
+            android:textStyle="bold"
+            android:textSize="12dp"
+            android:layout_marginTop="25dp"
+            android:layout_height="40dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/current_channel_ll"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_marginLeft="16dp"
@@ -151,6 +296,7 @@
     <RelativeLayout
 
         android:layout_width="match_parent"
+        android:id="@+id/no_more_channel_rl"
         android:layout_height="match_parent">
 
         <TextView
