--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <style name="mytheme" parent="android:style/Theme.Dialog">
+
+        <!-- <item name="android:paddingBottom">100px</item> -->
+        <item name="android:windowBackground">@drawable/bg_radius</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <!--<item name="android:windowAnimationStyle">@android:style/Animation.Translucent</item>-->
+    </style>
+
 </resources>
