--- a/app/src/main/res/layout/mz_banner_effect_layout.xml
+++ b/app/src/main/res/layout/mz_banner_effect_layout.xml
@@ -4,7 +4,7 @@
                 android:clipChildren="false"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-     <com.zhouwei.mzbanner.CustomViewPager
+     <com.example.cherry.fullplayer.mzbanner.CustomViewPager
          android:id="@+id/mzbanner_vp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
@@ -13,7 +13,7 @@
          android:layout_marginRight="30dp"
          >
 
-     </com.zhouwei.mzbanner.CustomViewPager>
+     </com.example.cherry.fullplayer.mzbanner.CustomViewPager>
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
