测试集成定位城市

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,8 @@
     <color name="button_color">#FF00CFA1</color>
     <color name="textBlackColor">#ff444444</color>
     <color name="dividerColor">#f5f5f5</color>
+
+    <color name="side_bar_text">#4A4A4A</color>
+    <color name="shadow_bg">#66000000</color>
+    <color name="super_light_grey">#9f9f9f</color>
 </resources>
