--- a/app/src/main/res/layout/activity_city.xml
+++ b/app/src/main/res/layout/activity_city.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/white"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
 
     <RelativeLayout
         android:id="@+id/rl"
@@ -11,17 +13,17 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18dp"
+            android:textSize="25dp"
             android:id="@+id/title_city"
             android:layout_centerVertical="true"
             android:textColor="#FF000000"
-            android:layout_marginLeft="18dp"
+            android:layout_marginLeft="16dp"
             android:text="选择城市"/>
         <TextView
             android:id="@+id/choosed_city"
             android:text="上海市"
-            android:textColor="#FF4A4A4A"
-            android:textSize="12dp"
+            android:textColor="#ff4a4a4a"
+            android:textSize="13dp"
             android:layout_marginRight="52dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
@@ -35,46 +37,37 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="12dp"
+            android:layout_marginRight="8dp"
             android:layout_marginTop="20dp"/>
     </RelativeLayout>
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="50.0dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10.0dp"
+        android:text="完成"
+        android:textSize="15dp"
+        android:textColor="@color/white"
+        android:background="@drawable/btn_search"
+        android:layout_marginLeft="12.0dp"
+        android:layout_marginRight="12.0dp" />
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_marginTop="32dp"
-        android:layout_gravity="center"
-        android:orientation="vertical">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/rl"
+        android:layout_above="@id/button"
+        android:layout_marginLeft="16.0dp"
+        android:layout_marginRight="30.0dp" />
 
-        <ListView
-            android:id="@+id/city_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:divider="@color/dividerColor"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:dividerHeight="0.5dp" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/city_dialog"
-        android:layout_width="80.0dip"
-        android:layout_height="80.0dip"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textColor="#000000"
-        android:textSize="30.0sp"
-        android:visibility="gone" />
-
-    <com.example.cherry.fullplayer.view.QuickLocationBar
-        android:id="@+id/city_loactionbar"
-        android:layout_width="30.0dip"
-        android:layout_height="fill_parent"
-        android:layout_gravity="right|center"
-        android:layout_marginTop="128dp"
-        android:layout_marginBottom="108dp"
-        android:paddingBottom="2dp" />
-
-</FrameLayout>
+    <com.example.cherry.fullplayer.view.WaveSideBarView
+        android:id="@+id/waveView"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/rl"
+        android:layout_marginTop="8dp"
+        android:layout_height="match_parent"
+        android:layout_above="@id/button" />
+</RelativeLayout>
