--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,6 @@
     <color name="side_bar_text">#4A4A4A</color>
     <color name="shadow_bg">#66000000</color>
     <color name="super_light_grey">#9f9f9f</color>
+    <color name="city_black">#ff000000</color>
+    <color name="hot_city_grey">#ff9b9b9b</color>
 </resources>
