--- a/app/src/main/res/layout/changepwd_activity.xml
+++ b/app/src/main/res/layout/changepwd_activity.xml
@@ -27,7 +27,7 @@
             android:gravity="center"
             android:textColor="@color/black"
             android:text="修改设备密码"
-            android:textSize="18dp"/>
+            android:textSize="11dp"/>
 
     </RelativeLayout>
 
@@ -35,7 +35,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="158dp">
+        android:layout_height="150dp">
         <TextView
             android:id="@+id/title_device"
             android:layout_width="wrap_content"
@@ -43,14 +43,15 @@
             android:layout_above="@+id/deviceWifiName"
             android:textColor="#FF4A4A4A"
             android:layout_centerInParent="true"
-            android:textSize="14dp"
+            android:textSize="10dp"
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/deviceWifiName"
             android:text="全播WiFi_001"
             android:textColor="#FF000000"
             android:clickable="false"
-            android:textSize="20dp"
+            android:textSize="19dp"
+            android:layout_marginTop="6dp"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -67,14 +68,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#FF000000"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:layout_gravity="center"
             android:text="原密码"/>
         <EditText
             android:id="@+id/inputOriginalPwd"
             android:hint="请输入原密码"
             android:textColor="#FF9B9B9B"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:clickable="true"
             android:background="@null"
             style="?android:attr/textViewStyle"
@@ -97,7 +98,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#FF000000"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:layout_gravity="center"
             android:text="新密码"/>
 
@@ -108,7 +109,7 @@
             android:background="@null"
             style="?android:attr/textViewStyle"
             android:textColor="#FF9B9B9B"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:layout_gravity="center"
             android:layout_marginLeft="35dp"
             android:layout_width="wrap_content"
@@ -128,19 +129,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#FF000000"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:layout_gravity="center"
             android:text="确认密码"/>
         <EditText
             android:id="@+id/inputCurrentPwd2"
             android:text="请再重复输入一次"
             android:textColor="#FF9B9B9B"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:clickable="true"
             android:background="@null"
             style="?android:attr/textViewStyle"
             android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="23dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -163,13 +164,13 @@
             android:text="确认修改"
             android:textColor="#FFFFFFFF"
             android:background="@drawable/btn_search"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:layout_gravity="center" />
         <TextView
-            android:textSize="12dp"
+            android:textSize="9dp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:textColor="@color/colorGrey"
+            android:textColor="#ffb2b2b2"
             android:text="注意：修改密码后会重新连接设备，需要输入新密码"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
