--- a/app/src/main/res/layout/qpop_activity.xml
+++ b/app/src/main/res/layout/qpop_activity.xml
@@ -27,7 +27,7 @@
             android:gravity="center"
             android:textColor="@color/black"
             android:text="关于我们"
-            android:textSize="18dp"/>
+            android:textSize="11dp"/>
 
     </RelativeLayout>
 
@@ -38,10 +38,10 @@
         android:orientation="vertical"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="20dp"
-        android:layout_height="200dp">
+        android:layout_height="150dp">
 
         <ImageView
-            android:src="@drawable/logo"
+            android:src="@mipmap/about_img_logo"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -49,15 +49,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#FF000000"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:text="全播 个人版"
+            android:layout_marginTop="5dp"
             android:layout_gravity="center" />
         <TextView
             android:layout_width="wrap_content"
             android:text="版本：V1.0.0"
             android:textColor="#FF9B9B9B"
-            android:textSize="13dp"
+            android:textSize="9dp"
             android:layout_gravity="center"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
@@ -73,14 +75,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="#FF000000"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:layout_weight="1"
             android:layout_gravity="center"
             android:text="微信公众号"/>
         <TextView
             android:text="Quanbo_APP"
             android:textColor="#FF9B9B9B"
-            android:textSize="13dp"
+            android:textSize="9dp"
             android:layout_marginRight="16dp"
             android:layout_gravity="center_vertical"
             android:layout_width="wrap_content"
@@ -90,7 +92,7 @@
     <View style="@style/DividerPadding"/>
 
     <LinearLayout
-        android:id="@+id/Setting_ChangeDevice"
+        android:id="@+id/service_ll"
         android:layout_width="match_parent"
         android:layout_marginLeft="16dp"
         android:layout_height="48dp">
@@ -99,7 +101,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#FF000000"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:layout_gravity="center"
             android:text="服务与条款"/>
     </LinearLayout>
@@ -109,19 +111,10 @@
     <LinearLayout
         android:id="@+id/Setting_Aboutus"
         android:layout_width="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_height="48dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#FF000000"
-            android:textSize="15dp"
-            android:layout_gravity="center"
-            android:text="去App Store评分"/>
+        android:background="#fff5f5f5"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
     </LinearLayout>
-
-    <View style="@style/DividerPadding"/>
 
 
 
